kubernetes/base/apps/self-hosted/actual/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  namespace: self-hosted
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: actual
  template:
    metadata:
      labels:
        app: actual
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: app
          image: ghcr.io/actualbudget/actual-server:26.4.0
          livenessProbe:
            tcpSocket:
              port: 5006
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 5006
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 12m
              memory: 128M
            limits:
              memory: 512M
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actual-longhorn-pvc
