kubernetes/base/apps/self-hosted/actual/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual
  namespace: self-hosted
spec:
  type: ClusterIP
  selector:
    app: actual
  ports:
    - name: http
      port: 5006
      targetPort: 5006
      protocol: TCP
